--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </nav>
  <div class="jumbotron d-flex align-items-center">
   <div class="container text-center">
-    <h1 class="display-1 mb-4">Diseño<br>Web</h1>
+    <h1 class="display-1 mb-4">ño<br>eb</h1>
   </div>
   <div class="rectangle-1"></div>
   <div class="rectangle-2"></div>
