--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ font-size: larger;
                 <h2 class="section-title">
                    Curso de <a href="https://gettemplates.co" target="_blank">Diseño Web</a>
                 </h2>
-                <p class="section-sub-title">En este curso aprenderás a crear tu propio sitio web, trabajando con HTML y CSS <br> Para este curso no es necesario tener conocimientos previos. El curso inicia en Marzo 2023.
+                <p class="section-sub-title">En este curso aprenderás a crear tu propio sitio web, trabajando con HTML y CSS <br> Para este curso no es necesario tener conocimientos previos. El curso inicia en Marzo de 2023.
 </p>
             </div>
 			
@@ -131,13 +131,13 @@ font-size: larger;
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="200">
                     <img class="rounded-circle" src="img/icons/animat-customize.gif" alt="Generic placeholder image" width="140" height="140">
                     <h5 class="mb-4">Duración </h5>
-                    <p>10 Clases, de una hora . Luego se podran dejar todas las consultas necesarias.</p>
+                    <p>10 Clases, de una hora . Luego se podrán dejar todas las consultas necesarias.</p>
                  </div>
                 <!-- /.col-md-4 col-sm-6  -->
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="400">
                     <img class="rounded-circle" src="img/icons/animat-responsive.gif" alt="Generic placeholder image" width="140" height="140">
                     <h5 class="mb-4">Responsive</h5>
-                    <p>Aprenderas como armar sitios web para pc y celulares. </p>
+                    <p>Aprenderás cómo armar sitios web para pc y celulares. </p>
                  </div>
                 <!-- /.col-md-4 col-sm-6  -->
             </div>
@@ -274,7 +274,7 @@ padding-left:0px;
                                     <i class="lnr lnr-clock fs-40"></i>
                                 </div>
                                 <h4>Duración</h4>
-                                <p>10 Clases, cada clase durara 1 hora.</p>
+                                <p>10 Clases, cada clase durará 1 hora a las <a href=""> <strong>21:30</strong></a></p>
                             </div>
 						
                             <div class="shadow rounded feature-item p-4 mb-4" data-aos="fade-up">
@@ -293,7 +293,7 @@ padding-left:0px;
                                     <i class="lnr lnr-bubble fs-40"></i>
                                 </div>
                                       <h4>Clases en VIVO</h4>
-                                <p>Luego de las clases se podran hacer todas las preguntas que surgan.</p>
+                                <p>Luego de las clases se podrán hacer todas las preguntas que surjan.</p>
 								</div>
                             <div class="shadow rounded feature-item p-4 mb-4" data-aos="fade-up">
                                 <div class="my-4">
@@ -319,7 +319,7 @@ padding-left:0px;
                                     <i class="lnr lnr-thumbs-up fs-40"></i>
                                 </div>
                                 <h4>Requisitos mínimos</h4>
-                                <p>Computadora 2 gb de RAM y una camara web.</p>
+                                <p>Computadora 2 gb de RAM y una cámara web.</p>
                             </div>
                         </div>
                         <!-- End of Feature Item -->
@@ -374,7 +374,7 @@ padding-left:0px;
 
                         <div class="col-md-4 offset-md-right-2 col-sm-6" data-aos="fade-left">
                             <h4 class="mb-4">Próximo curso</h4>
-                            <p>El próximo curso es de nivel INTERMEDIO, en este curso se podrán capacitar en un lenguaje de programación. El cual les permitirá crear páginas más dinámicas, con carrito de compras o sistemas de ventas. Para mas información podrán comunicarse al 11 3770-0680.</p>
+                            <p>El próximo curso es de nivel INTERMEDIO, en este curso se podrán capacitar en un lenguaje de programación. El cual les permitirá crear páginas más dinámicas, con carrito de compras o sistemas de ventas. Para más información podrán comunicarse al <a href="https://wa.me/5491137700680">11 3770-0680</a>.</p>
                          
                         </div><!--/ .col-md-4.col-md-offset-2.col-sm-6 -->
 
@@ -394,7 +394,7 @@ padding-left:0px;
             <!-- Section Title -->
             <div class="title-wrap">
                 <h2 class="section-title">Algunos <b>proyectos</b> web</h2>
-                <p class="section-sub-title">Los siguientes proyectos fueron armados por <a href="https://www.instagram.com/ayala.web/">@ayala.web</a> con HTML, CSS. Y en algunos casos se utilizo PHP.</p>
+                <p class="section-sub-title">Los siguientes proyectos fueron armados por <a href="https://www.instagram.com/ayala.web/">@ayala.web</a> con HTML, CSS. Y en algunos casos se utilizó PHP.</p>
             </div>
             <!-- End of Section Title -->
             <div class="row">
@@ -601,7 +601,7 @@ padding-left:0px;
                 <div class="bg-white p-5 shadow">
                     <div class="heading-section text-center">
                         <h2 class="mb-4">
-                           Formulario de Inscripcion
+                           Formulario de Inscripción
                         </h2>
                     </div>
                     <form method="post" name="contact-us" action="index.php">
@@ -640,7 +640,7 @@ implementación.</p>
                 <ul class="list-inline py-2">
                     <li class="list-inline-item text-center">
                         <span class="lnr fs-40 lnr-rocket"></span>
-                        <p>Despegá</p>
+                        <p>Despega</p>
                     </li>
                     <li class="list-inline-item text-center">
                         <span class="lnr fs-40 lnr-magic-wand"></span>
@@ -648,7 +648,7 @@ implementación.</p>
                     </li>
                     <li class="list-inline-item text-center">
                         <span class="lnr fs-40 lnr-cog"></span>
-                        <p>Automatizá</p>
+                        <p>Automatiza</p>
                     </li>
                 </ul>
 
