--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ font-size: larger;
      height: 50px;
     padding: 2px;
     position: fixed;
-    right: 55px;
+    right: 125px;
     text-align: center;
     text-decoration: none;
     width: 70px;
@@ -181,11 +181,24 @@ padding-left:0px;
 
 
 .jumbotron h1 {
-    font-size: 5rem !important;
+    font-size: 4rem !important;
 }
 .jumbotron { 
     min-height: 65vh!important;
 }
+
+
+
+.rectangle-transparent-2 {
+    width: 300px;
+    height: 300px; 
+    right: 20%;
+	
+	}
+	.rectangle-transparent-1 {
+    width: 300px;
+    height: 300px;
+	}
 }
 
 
@@ -385,7 +398,12 @@ padding-left:0px;
             </div><!--/ .row -->
         </div>
     </div><!--/ .container -->
-
+<style>
+.shadow2{
+padding:10px;
+max-height: 240px;
+box-shadow: 0 10px 30px 0 rgb(67 80 98 / 15%), 0 2px 4px 0 rgb(67 80 98 / 10%) !important;
+}</style>
 </section>	<!-- Testimonial Section-->
  <!-- End of Testimonial Section-->	<!-- Portfolio Section -->
 <section id="portfolio" class="bg-white">
@@ -413,8 +431,8 @@ padding-left:0px;
                         <div class="grid-sizer"></div>
                         <div class="gutter-sizer"></div>
                         <!-- Portfolio Item -->
-                        <div class="grid-item minimalism" data-aos="fade-up">
-                            <div class="grid-item-wrapper">
+                        <div class="grid-item minimalism shadow2" data-aos="fade-up">
+                            <div class="grid-item-wrapper ">
                                 <img src="mariapaula.png" alt="portfolio-img" class="portfolio-item">
                                 <div class="grid-info">
                                     <div class="grid-link d-flex justify-content-center">
@@ -434,7 +452,7 @@ padding-left:0px;
                         </div>
 						
 						              <!-- Portfolio Item -->
-                        <div class="grid-item creative" data-aos="fade-up">
+                        <div class="grid-item creative shadow2" data-aos="fade-up">
                             <div class="grid-item-wrapper">
                                 <img src="animal2.png" alt="portfolio-img" class="portfolio-item">
                                 <div class="grid-info">
@@ -457,7 +475,7 @@ padding-left:0px;
 						
                         <!-- End of Portfolio Item -->
                         <!-- Portfolio Item -->
-                        <div class="grid-item vintage" data-aos="fade-up">
+                        <div class="grid-item vintage shadow2" data-aos="fade-up">
                             <div class="grid-item-wrapper">
                                 <img src="vibra.png" alt="portfolio-img" class="portfolio-item">
                                 <div class="grid-info">
@@ -478,7 +496,7 @@ padding-left:0px;
                         </div>
                         <!-- End of Portfolio Item -->
                         <!-- Portfolio Item -->
-                        <div class="grid-item creative grid-item-height" data-aos="fade-up">
+                        <div class="grid-item creative grid-item-height shadow2" data-aos="fade-up">
                             <div class="grid-item-wrapper">
                                 <img src="conectar.png" alt="portfolio-img" class="portfolio-item">
                                 <div class="grid-info">
@@ -499,7 +517,7 @@ padding-left:0px;
                         </div>
                         <!-- End of Portfolio Item -->
                         <!-- Portfolio Item -->
-                        <div class="grid-item creative" data-aos="fade-up">
+                        <div class="grid-item creative shadow2" data-aos="fade-up">
                             <div class="grid-item-wrapper">
                                 <img src="animal.png" alt="portfolio-img" class="portfolio-item">
                                 <div class="grid-info">
@@ -520,7 +538,7 @@ padding-left:0px;
                         </div>
                         <!-- End of Portfolio Item -->
                         <!-- Portfolio Item -->
-                        <div class="grid-item vintage" data-aos="fade-up">
+                        <div class="grid-item vintage shadow2" data-aos="fade-up">
                             <div class="grid-item-wrapper">
                                 <img src="mariano.png" alt="portfolio-img" class="portfolio-item">
                                 <div class="grid-info">
