--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <!--
@@ -175,6 +175,11 @@ padding-left: 1.5em;
 }
 
 @media (max-width: 992px){
+
+body{
+overflow-x: hidden !important;
+}
+
 .padinleft{
 padding-left:0px;
 }
