--- a/registro.html
+++ b/registro.html
@@ -58,6 +58,7 @@ font-size: larger;
     <div class="container">
         <a class="navbar-brand d-flex align-items-center text-white" href="/">
             <h3 class="font-weight-bolder mb-0">Ayala Web</h3>
+			
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav-header" aria-controls="navbar-nav-header" aria-expanded="false" aria-label="Toggle navigation">
             <span class="lnr lnr-menu"></span>
@@ -84,7 +85,14 @@ font-size: larger;
 </nav>
  <div class="jumbotron d-flex align-items-center">
   <div class="container text-center">
+			<p style="
+    font-size: 2em;
+    margin-top: 2em;
+    font-weight: 500;
+    margin-bottom: 2em;
+">Muchas gracias! En breve nos comunicaremos con usted.</p>
     <h1 class="display-1 mb-4">Diseño<br>Web</h1>
+
   </div>
   <div class="rectangle-1"></div>
   <div class="rectangle-2"></div>
