--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 
 </head>
 <style>
+
+
+
 .section-sub-title{
 font-size: larger;
     font-weight: 500;
@@ -42,11 +45,26 @@ font-size: larger;
      height: 50px;
     padding: 2px;
     position: fixed;
-    right: 125px;
+    right: 55px;
     text-align: center;
     text-decoration: none;
     width: 70px;
     z-index: 99999
+}
+
+
+row{
+   margin-right: 0px !important;
+}
+
+container-fluid{
+   padding-right: 0px !important;
+}
+
+
+html, body {
+    max-width: 100% !important;
+    overflow-x: hidden !important;
 }
 
 </style>
@@ -175,6 +193,18 @@ padding-left: 1.5em;
 
 @media (max-width: 992px){
 
+
+
+.rectangle-1 {
+    width: 200px!important;
+	}
+	
+	.circle-2 {
+    left: 73%;
+	}
+
+	
+	
 body{
 overflow-x: hidden !important;
 }
