--- a/registro.html
+++ b/registro.html
@@ -42,11 +42,18 @@ font-size: larger;
      height: 50px;
     padding: 2px;
     position: fixed;
-    right: 125px;
+    right: 55px;
     text-align: center;
     text-decoration: none;
     width: 70px;
     z-index: 99999
+}
+
+
+
+html, body {
+    max-width: 100% !important;
+    overflow-x: hidden !important;
 }
 
 </style>
@@ -163,6 +170,10 @@ font-size: larger;
 
 
  <style>
+ 
+  
+
+
  .btn:not(:disabled):not(.disabled) {
     cursor: pointer;
     width: 150px;
@@ -182,6 +193,20 @@ padding-left: 1.5em;
 }
 
 @media (max-width: 992px){
+
+
+section {
+    position: fixed !important;
+}
+
+
+.rectangle-1 {
+    width: 200px!important;
+	}
+	
+	.circle-2 {
+    left: 73%;
+	}
 
 body{
 overflow-x: hidden !important;
