--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ html, body {
                 <h2 class="section-title">
                    Curso de <a href="https://gettemplates.co" target="_blank">Diseño Web</a>
                 </h2>
-                <p class="section-sub-title">En este curso aprenderás a crear tu propio sitio web, trabajando con HTML y CSS <br> Para este curso no es necesario tener conocimientos previos. El curso inicia en Marzo de 2023.
+                <p class="section-sub-title">En este curso aprenderás a crear tu propio sitio web, trabajando con HTML y CSS <br> Para este curso no es necesario tener conocimientos previos. El curso inicia en Septiembre 2024.
 </p>
             </div>
 			
@@ -142,7 +142,7 @@ html, body {
                 <div class="col-md-4 col-sm-6" data-aos="fade-up">
                     <img class="rounded-circle" src="img/icons/animat-checkmark.gif" alt="Generic placeholder image" width="140" height="140">
                     <h5 class="mb-4">Modalidad</h5>
-                    <p>- Online en vivo: vas a tener 2 clases en vivo por semana.</p>
+                    <p>- Online en vivo: vas a tener 1 clases en vivo por semana.</p>
                 </div>
                 <!-- /.col-md-4 col-sm-6  -->
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="200">
